// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Controlled 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="textfield-controlled"
  >
    Beskriv bekymringen din
  </label>
  <textarea
    id="textfield-controlled"
    rows="4"
  >
  </textarea>
</ds-field>
<button
  data-variant="secondary"
  type="button"
  style="margin-top: var(--ds-size-2);"
>
  Tøm feltet
</button>
`;

exports[`Disabled 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="textarea-disabled"
  >
    Disabled Textarea
  </label>
  <textarea
    id="textarea-disabled"
    disabled
  >
  </textarea>
</ds-field>
`;

exports[`Focused 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="my-textarea"
  >
    Label
  </label>
  <textarea
    rows="3"
    cols="20"
    id="my-textarea"
  >
  </textarea>
</ds-field>
`;

exports[`Full Width 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="my-textarea"
  >
    Beskriv bekymringen din
  </label>
  <textarea id="my-textarea">
  </textarea>
</ds-field>
`;

exports[`Preview 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="my-textarea"
  >
    Label
  </label>
  <textarea
    rows="3"
    cols="20"
    id="my-textarea"
  >
  </textarea>
</ds-field>
`;

exports[`Read Only 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="textarea-readonly"
  >
    Read-Only Textarea
  </label>
  <textarea
    id="textarea-readonly"
    readonly
  >
  </textarea>
</ds-field>
`;
